; ModuleID = '/home/carl/AnghaBench/meltdown/libkdump/extr_libkdump.c_read_value.c'
source_filename = "/home/carl/AnghaBench/meltdown/libkdump/extr_libkdump.c_read_value.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@mem = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @read_value to i8*)], section "llvm.metadata"

; Function Attrs: alwaysinline nounwind uwtable
define internal i32 @read_value() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  store i32 0, i32* %2, align 4
  store i32 0, i32* %1, align 4
  br label %3

3:                                                ; preds = %19, %0
  %4 = load i32, i32* %1, align 4
  %5 = icmp slt i32 %4, 256
  br i1 %5, label %6, label %22

6:                                                ; preds = %3
  %7 = load i64, i64* @mem, align 8
  %8 = load i32, i32* %1, align 4
  %9 = mul nsw i32 %8, 4096
  %10 = sext i32 %9 to i64
  %11 = add nsw i64 %7, %10
  %12 = call i64 @flush_reload(i64 %11)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %17

14:                                               ; preds = %6
  %15 = load i32, i32* %1, align 4
  %16 = add nsw i32 %15, 1
  store i32 %16, i32* %2, align 4
  br label %17

17:                                               ; preds = %14, %6
  %18 = call i32 (...) @sched_yield()
  br label %19

19:                                               ; preds = %17
  %20 = load i32, i32* %1, align 4
  %21 = add nsw i32 %20, 1
  store i32 %21, i32* %1, align 4
  br label %3

22:                                               ; preds = %3
  %23 = load i32, i32* %2, align 4
  %24 = sub nsw i32 %23, 1
  ret i32 %24
}

declare dso_local i64 @flush_reload(i64) #1

declare dso_local i32 @sched_yield(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
